Fixed some style problems on small-screens

--- a/AppAddButton.scss
+++ b/AppAddButton.scss
@@ -20,5 +20,5 @@
   font-weight: 600 !important;
   border-radius: $boxBorderRadius;
   height: 25px;
-  padding: 0px 10px 0px 10px;
+  padding: 5px 10px 5px 10px;
 }
