--- a/AppForm.scss
+++ b/AppForm.scss
@@ -18,6 +18,7 @@
 .formRow {
   @include flexView(column, center, flex-start);
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .formRowError {
@@ -33,7 +34,7 @@
 
 .formInput {
   @include formInputTextProps();
-  width: 300px;
+  width: 100%;
   border-radius: $boxBorderRadius;
   padding-left: 5px;
   border-width: 1px;
@@ -45,7 +46,7 @@
 }
 
 .submitButton {
-  width: 300px;
+  width: 100%;
   height: 40px;
   margin-top: 20px;
 }
